Temporary fix for calendar event data not showing Fixed term and week spinner arrow positioning

--- a/static-data/static/css/admin.css
+++ b/static-data/static/css/admin.css
@@ -578,6 +578,10 @@ select.event-type {
 	margin: 0;
 }
 
+#calendarHeading .calendarNavigation.week-calendar-navigation {
+	margin-left: 367px;
+}
+
 .calendarEventInfo .actions {
 	margin-top: 18px;
 }
